--- a/ressources/index.css
+++ b/ressources/index.css
@@ -6,9 +6,55 @@ body {
 
 .heade {
     background-color: rgb(82, 81, 81);
+    margin: 0px;
+    display: flex;
     color:white;
-    padding: 1px;
+    padding: 0px;
     text-align: center;
-    word-spacing: 150px;
-    font-size: 48px;
+    word-spacing: 40px;
+    justify-content: center;
+    height: 140px;
 }
+
+.heade h6 {
+    font-size: 60px;
+    margin:0;
+    line-height: 140px;
+    color: rgba(255, 217, 0, 0.5);
+    padding: 0px;
+}
+
+.mainC {
+    border: 10px;
+    display: flex;
+    border: 0px solid white;
+    align-items: center;
+    justify-content: center;
+    gap:10px;
+    padding: 30px;
+    margin-top: 50px;
+    gap:70px;
+    
+}
+
+.mainC button {
+    height: 180px;
+    width: 200px;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    background-color: rgb(82, 79, 79);
+    font-size: 60px;
+}
+
+.scores {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    color: rgb(233, 214, 108);
+    font-size: 24px;
+}
+
