--- a/ressources/index.css
+++ b/ressources/index.css
@@ -51,6 +51,7 @@ body {
 
 .scores {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-top: 40px;
