--- a/ressources/index.css
+++ b/ressources/index.css
@@ -59,3 +59,10 @@ body {
     font-size: 24px;
 }
 
+.winner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 60px;
+    color: red;
+    }
