--- a/ressources/index.css
+++ b/ressources/index.css
@@ -24,6 +24,15 @@ body {
     padding: 0px;
 }
 
+.intro {
+    text-align: center;
+    margin:0;
+    margin-top: 5px;
+    padding: 0px;
+    border: 0px solid white;
+    font-size: 24px;
+}
+
 .mainC {
     border: 10px;
     display: flex;
@@ -32,7 +41,7 @@ body {
     justify-content: center;
     gap:10px;
     padding: 30px;
-    margin-top: 50px;
+    margin-top: 0px;
     gap:70px;
     
 }
@@ -51,18 +60,57 @@ body {
 
 .scores {
     display: flex;
-    flex-direction: column;
     align-items: center;
+    gap: 120px;
     justify-content: center;
-    margin-top: 40px;
+    margin-top: 20px;
     color: rgb(233, 214, 108);
-    font-size: 24px;
+    font-size: 34px;
 }
 
 .winner {
     display: flex;
+    border: 0px solid white;
+    height: 1px;
     align-items: center;
     justify-content: center;
+    margin-top: 20px;
+    font-size: 48px;
+    color: white;
+}
+
+.tracker {
+    border: 1px solid gold;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgb(82,79,79);
+    padding: 0;
+    height: 180px;
+    margin: 100px;
     margin-top: 60px;
-    color: red;
-    }
+}
+
+.tracker p {
+    text-align: center;
+    margin: 0;
+    padding: 5px;
+    margin-bottom: auto;
+    height: 30px;
+    font-size: 35px;
+    text-decoration: underline;
+    color:wheat;
+    border: 0px solid white;
+}
+
+.tracker .different {
+    display:flex;
+    justify-content: center;
+    gap: 50px;
+}
+
+.tracker .different p {
+    text-decoration: none;
+    border : 0px solid white;
+    margin: 50px;
+}
